# gtest-example-cpp

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Example.h
src/: Example.cpp
test/: CMakeLists.txt  main.tst.cpp  test_class.tst.cpp
